...
      key: _formKey,
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
          Align(
            alignment: Alignment.centerLeft,
            child: Text(_isEdit ? 'Edit Unit' : 'New Unit',
                style: Type.title2.semibold.colored(sys.label)),
          ),
          const SizedBox(height: 18),
          _Field(
            controller: _code,
            label: 'Unit no.',
...
